update examples for declarative runtime builder